<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="pref_internet_name">Conexiune la Internet</string>

    <string name="pref_periodic_delete">Stergere periodica</string>
    <string name="pref_periodic_delete_key">Stergere Periodica</string>
    <string name="pref_periodic_delete_duration">Durata stergere</string>

    <string-array name="pref_periodic_delete_time">
        <item>1 zi</item>
        <item>7 zile</item>
        <item>30 zile</item>
    </string-array>

    <string-array name="pref_periodic_delete_duration">
        <item>1</item>
        <item>7</item>
        <item>30</item>
    </string-array>

    <string name="app_name">InfiniNotes</string>
    <string name="adaug_notita">Adaugă notiță</string>
    <string name="adaug_sectiune">Adaugă secțiune</string>
    <string name="adauga_lista">Adaugă listă</string>
    <string name="nume_sectiune">Nume secțiune</string>
    <string name="nume_lista">Nume listă</string>
    <string name="scrie_aici">Scrie aici</string>
    <string name="btn_adauga_notita">Buton de adăugare de notiță</string>
    <string name="btn_adauga_lista">Buton de adăugare de listă</string>
    <string name="btn_adauga_sectiune">Buton de adăugare de secțiune</string>
    <string name="logo_aplicatie">Logo aplicatie</string>
    <string name="data_reminder">Data reminder</string>
    <string name="titlu_notita">Titlu notita</string>
    <string name="no_save_sectiunea">Nu s-a salvat sectiunea.</string>
    <string name="btn_data_reminder">Data reminder</string>
    <string name="misc">MISC</string>
    <string name="modificari_succes">Modificări efectuate cu succes!</string>
    <string name="modificari_esec">Nu s-au salvat modificări.</string>
    <string name="buton_pentru_anulare_proces_de_adaugare" tools:ignore="Typos">Buton pentru anulare proces de adaugare.</string>
    <string name="buton_pentru_vizualizare_si_editare_notita">Buton pentru vizualizare si editare notita</string>
    <string name="buton_pentru_stergere_notita">buton pentru stergere notita</string>
    <string name="titlu_este_necesar_pentru_salvare">Titlu este necesar pentru salvare.</string>
    <string name="pattern_data">dd / MM / yyyy</string>
    <string name="error_editeaza_notita_update_notita1">Eroare in salvarea modificarilor unei notite in ActivitateEditeazNotita</string>
    <string name="error_editeaza_notita_update_notita2">Eroare la incarcarea spinner-ului de sectiuni in ActivitateaEditeazaNotita.</string>
    <string name="error_editeaza_notita_update_notita3">Eroare schimbare sectiune in ActivitateEditeazaNotita - schimbare legatura baza de date esuat</string>
    <string name="error_editeaza_notita_update_notita4">Eroare parsare dataReminder in ActivitateEditeazaNotita</string>
    <string name="error_adaugare_generala_lista_notite_existenta">Sectiunea deja exista, alegeti alta denumire</string>
    <string name="error_adaugare_generala_lista_notite_adaugare_notite_esuata">Elementele sectiunii nu au putut fi salvate.</string>
    <string name="warning_no_name_listanotite">Nu s-a introdus o denumire pentru lista</string>
    <string name="error_adaugare_generala_sectiune_existenta">Sectiunea deja exista, alegeti alta denumire</string>
    <string name="warning_no_name_sectiune">Nu s-a introdus o denumire pentru sectiune</string>
    <string name="error_view_weather_no_access">incarcarePrognoza error: ${error.localizedMessage}</string>
    <string name="error_view_weather_key_file_no_read">Eroare citire fisier cheie API OpenWeather.</string>
    <string name="error_view_weather_json_read_fail">Eroare citire fisier JSON OpenWeather API.</string>
    <string name="error_view_weather_general_fail">Incarcare view weather esuata</string>
    <string name="descriere_setari_internet">Această opțiune dezactivează ilustrarea temperaturii, precum și opțiunea de partajare sau backup în Google Drive.</string>
    <string name="btn_back">Buton pentru revenire la activitatea precedenta.</string>
    <string name="btn_text_liste">LISTE</string>
    <string name="btn_vizual_notite">Buton vizualizare notite</string>
    <string name="succes_activity_setari_backup_db">Backup realizat.</string>
    <string name="error_activity_setari_backup_db">Backup eșuat.</string>
    <string name="succes_activity_setari_restaurare_db">Restaurare realizată.</string>
    <string name="error_activity_setari_restaurare_db">Restaurare eșuată.</string>
    <string name="com_ase_aplicatienotite_fileprovider">com.ase.aplicatienotite.fileprovider</string>
    <string name="application_db_share_type">application/db</string>
    <string name="message_export_db_infininotes">Export baza de date InfiniNotes</string>
    <string name="error_view_adauga_notita_invalid_date">error_view_adauga_notita_invalid_date</string>
    <string name="error_broadcast_receiver_notita_reminder">error_broadcast_receiver_notita_reminder</string>
    <string name="pref_sectiuni_ordine" />
    <string name="btn_ora_reminder">Ora reminder</string>
    <string name="buton_anulare_adaugare">buton anulare Adaugare button</string>
    <string name="buton_adaugare_notitta">buton adaugare notitta</string>
    <string name="adaug_element_nou_n_lista_curent">Adaugă element nou în lista curentă</string>
    <string name="button_for_adding_new_list_item">Button for adding new list item</string>
    <string name="error_elementelistanotite_save_element_lista_nou">VizualElementeListaNotite salvare element lista nou esuata</string>
    <string name="buton_pentru_partajare_continut_notita">Buton pentru partajare continut notita</string>
    <string name="buton_adaugare_generala">Buton adaugare generala</string>
    <string name="backup_fisiere">Backup fisiere</string>
    <string name="restaurare_fisiere">Restaurare fisiere</string>
    <string name="button_for_import_of_data">button for import of data</string>
    <string name="button_for_share">button for share</string>
    <string name="nc_rcare_noti_e">Încărcare notițe</string>
    <string name="partajare_noti_e">Partajare notițe</string>
    <string name="iconita_vreme">Iconita vreme</string>
    <string name="bucuresti">București</string>
    <string name="nu_exista_notite_adaugate">Nu există notițe adăugate.</string>
    <string name="nu_exista_liste_adaugate">Nu există liste adăugate.</string>
</resources>