<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="General">

        <SwitchPreferenceCompat
            android:title="@string/pref_internet_name"
            android:defaultValue="true"
            android:key="@string/pref_internet_name"
            />

        <SwitchPreferenceCompat
            android:title="@string/pref_periodic_delete"
            android:defaultValue="false"
            android:key="@string/pref_periodic_delete_key"
            />

        <ListPreference
            android:title="@string/pref_periodic_delete"
            android:defaultValue="2"
            android:dialogTitle="@string/pref_periodic_delete"
            android:entries="@array/pref_periodic_delete_time"
            android:entryValues="@array/pref_periodic_delete_duration"
            android:summary="@string/pref_periodic_delete"
            />


    </PreferenceCategory>
</PreferenceScreen>