<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/border_listviewprincipal_unrounded">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10sp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/logo_aplicatie"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_centrat_app" />

    <EditText
        android:id="@+id/etNumeAdaugaSectiune"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="100sp"
        android:background="@drawable/border_lv_principal"
        android:fontFamily="@font/alata"
        android:hint="@string/nume_sectiune"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="5sp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnAdaugaSectiune"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="5sp"
        android:fontFamily="@font/alata"
        android:text="@string/adauga_lista"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeAdaugaSectiune"
        app:layout_constraintVertical_bias="0.015" />

    <EditText
        android:id="@+id/etContinutAdaugaLista"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="5sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="5sp"
        android:autoText="false"
        android:background="@drawable/border_lv_principal"
        android:elegantTextHeight="false"
        android:gravity="top"
        android:hint="@string/scrie_aici"
        android:padding="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textAlignment="viewStart"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeAdaugaLista"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/btnAdaugaSectiune"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="15sp"
        android:background="@drawable/img_btn_selector_addition"
        android:contentDescription="@string/btn_adauga_sectiune"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/spCuloareSectiune"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnAdaugaLista"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.588" />

    <ImageButton
        android:id="@+id/btnAdaugaNotita"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="15sp"
        android:background="@drawable/img_btn_selector_addition"
        android:contentDescription="@string/btn_adauga_notita"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnAdaugaLista"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="15sp"
        android:background="@drawable/addition"
        android:contentDescription="@string/btn_adauga_lista"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/etNumeAdaugaLista"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/btnAdaugaNotita"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.75"
        app:srcCompat="@drawable/addition" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="20sp"
        android:layout_marginBottom="5sp"
        android:fontFamily="@font/alata"
        android:text="@string/adaug_sectiune"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.019" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/alata"
        android:text="@string/adaug_notita"
        android:textColor="@color/brown"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.894" />

    <EditText
        android:id="@+id/etNumeAdaugaLista"
        android:layout_width="0dp"
        android:layout_height="40sp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="230sp"
        android:background="@drawable/border_lv_principal"
        android:fontFamily="@font/alata"
        android:hint="@string/nume_lista"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:paddingBottom="5sp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spSectiuneListaNoua"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/border_lv_principal"
        android:contentDescription="choosing element for the section in which the list will reside "
        android:padding="5sp"
        android:paddingBottom="10sp"
        android:popupBackground="@drawable/border_lv_principal"
        app:layout_constraintBottom_toBottomOf="@+id/etNumeAdaugaLista"
        app:layout_constraintEnd_toStartOf="@+id/btnAdaugaLista"
        app:layout_constraintHorizontal_bias="0.838"
        app:layout_constraintStart_toEndOf="@+id/etNumeAdaugaLista"
        app:layout_constraintTop_toTopOf="@+id/etNumeAdaugaLista"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvUnderline"
        android:layout_width="0dp"
        android:layout_height="5sp"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView6"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="5sp"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="5sp"
        android:background="@drawable/underline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/btnAnulareAdaugare"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="15sp"
        android:background="@drawable/img_btn_selector_left_arrow"
        android:contentDescription="@string/buton_pentru_anulare_proces_de_adaugare"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.0" />

    <com.ase.aplicatienotite.extern.openweatherapi.ViewWeather
        android:id="@+id/viewWeather4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="15sp"
        android:background="@drawable/btn_selector_skin_brown"
        app:layout_constraintBottom_toBottomOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.003"
        custom:setDataProvider="cheie.txt" />

    <Spinner
        android:id="@+id/spCuloareSectiune"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/border_lv_principal"
        android:contentDescription="Color list for section"
        android:popupBackground="@drawable/border_lv_principal"
        app:layout_constraintBottom_toBottomOf="@+id/etNumeAdaugaSectiune"
        app:layout_constraintEnd_toStartOf="@+id/btnAdaugaSectiune"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etNumeAdaugaSectiune"
        app:layout_constraintTop_toTopOf="@+id/etNumeAdaugaSectiune"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>