<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@drawable/border_listviewprincipal_unrounded"
    android:theme="@style/Button.Brown">

    <Button
        android:id="@+id/btnReminderEditeazaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="270dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/btn_selector_skin_brown"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:padding="5sp"
        android:text="@string/btn_data_reminder"
        android:textColor="@color/white"
        android:textColorHighlight="@color/brown"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/brown"
        android:textSize="11sp"
        android:theme="@style/Button.Brown"
        app:layout_constraintBottom_toTopOf="@+id/etCorpTextNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNumeAdaugaNotita" />

    <Button
        android:id="@+id/btnOraReminderEditeazaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="170dp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/btn_selector_skin_brown"
        android:ems="10"
        android:fontFamily="@font/alata"
        android:gravity="center"
        android:padding="5sp"
        android:text="@string/btn_ora_reminder"
        android:textColor="@color/white"
        android:textColorHighlight="@color/brown"
        android:textColorHint="@color/grey"
        android:textColorLink="@color/brown"
        android:textSize="11sp"
        android:theme="@style/Button.Brown"
        app:layout_constraintBottom_toBottomOf="@+id/btnReminderEditeazaNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/btnReminderEditeazaNotita"
        app:layout_constraintTop_toTopOf="@+id/btnReminderEditeazaNotita"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/spSectiuneAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="70sp"
        android:layout_marginBottom="10sp"
        android:background="@drawable/border_lv_principal"
        android:padding="5sp"
        android:popupBackground="@drawable/border_lv_principal"
        app:layout_constraintBottom_toTopOf="@+id/etCorpTextNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnOraReminderEditeazaNotita"
        app:layout_constraintTop_toBottomOf="@+id/etNumeAdaugaNotita" />

    <EditText
        android:id="@+id/etNumeAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="90sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="60sp"
        android:background="@drawable/border_lv_principal"
        android:fontFamily="@font/alata"
        android:hint="@string/titlu_notita"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:singleLine="true"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/etCorpTextNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <EditText
        android:id="@+id/etCorpTextNotita"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10sp"
        android:layout_marginTop="200sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="100sp"
        android:autoLink="web|phone|email"
        android:background="@drawable/border_lv_principal"
        android:gravity="start"
        android:hint="@string/scrie_aici"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:linksClickable="true"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="10sp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/logo_aplicatie"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/etNumeAdaugaNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_centrat_app" />

    <ImageButton
        android:id="@+id/btnAnulareEditareNotita"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_margin="10sp"
        android:background="@drawable/img_btn_selector_save"
        android:contentDescription="@string/buton_anulare_adaugare"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorpTextNotita"
        app:layout_constraintVertical_bias="0.2" />

    <com.ase.aplicatienotite.extern.openweatherapi.ViewWeather
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_margin="10dp"
        android:layout_marginStart="1dp"
        android:background="@drawable/btn_selector_skin_brown"
        app:layout_constraintBottom_toTopOf="@+id/etNumeAdaugaNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imgBtnShareNotita"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8sp"
        android:layout_marginEnd="12sp"
        android:background="@drawable/img_btn_selector_share"
        android:contentDescription="@string/buton_pentru_partajare_continut_notita"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/spSectiuneAdaugaNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spSectiuneAdaugaNotita"
        app:layout_constraintTop_toTopOf="@+id/spSectiuneAdaugaNotita" />

</androidx.constraintlayout.widget.ConstraintLayout>