<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige">

    <Spinner
        android:id="@+id/spListaAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="125sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/border_listviewprincipal"
        android:padding="5dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/etdReminderAdaugaNotita"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeAdaugaNotita" />

    <EditText
        android:id="@+id/etdReminderAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="270sp"
        android:background="@drawable/border_listviewprincipal"
        android:ems="10"
        android:hint="@string/data_reminder"
        android:inputType="date"
        android:padding="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColorHint="@color/grey"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeAdaugaNotita" />

    <Spinner
        android:id="@+id/spSectiuneAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="5sp"
        android:layout_marginEnd="5sp"
        android:background="@drawable/border_listviewprincipal"
        android:padding="5sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toStartOf="@+id/spListaAdaugaNotita"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toEndOf="@+id/etdReminderAdaugaNotita"
        app:layout_constraintTop_toBottomOf="@+id/tvNumeAdaugaNotita" />

    <EditText
        android:id="@+id/tvNumeAdaugaNotita"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/border_listviewprincipal"
        android:fontFamily="@font/alata"
        android:hint="@string/titlu_notita"
        android:padding="5sp"
        android:paddingStart="10sp"
        android:paddingEnd="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.057"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.605" />

    <EditText
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="450dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/border_listviewprincipal"
        android:hint="@string/scrie_aici"
        android:padding="10sp"
        android:textColorHint="@color/grey"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="325sp"
        android:layout_marginBottom="10sp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/tvNumeAdaugaNotita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_centrat_app" />

    <ImageButton
        android:id="@+id/btnAdaugaNotitaFinal"
        android:layout_width="80sp"
        android:layout_height="80sp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.333"
        app:srcCompat="@drawable/addition" />

    <ImageButton
        android:id="@+id/btnAnulareNotita"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.357"
        app:srcCompat="@drawable/cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>